Sun Aug 17 16:42:43 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
	  (main), src/lexgrog_test.c (main), src/man.c (main), src/manconv.c
	  (main), src/mandb.c (main), src/manpath.c (main), src/whatis.c
	  (main), src/zsoelim.l (main): Suppress locale warning if being
	  called by another man-db program (Debian bug #494989).

Sun Aug 17 00:27:07 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (tmp_cat_fd, man_modtime, discard_stderr): Move
	  definitions outside MAN_CATS guard; these are needed by catman
	  handling and (in the case of discard_stderr) manual page
	  formatting functions as well as cat handling in man itself
	  (Savannah bug #24044).

Thu Aug  7 02:12:09 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): If we fail to decompress man_file and it
	  matters (i.e. we aren't just displaying a stray cat), then emit an
	  error message and return early (Coverity CID #5, #6).

Wed Aug  6 22:36:48 BST 2008  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (infoalloc): Move to ...
	* libdb/db_storage.h (infoalloc): ... here (as inline function).
	  Include "xalloc.h" for this.
	  (dblookup_all, dblookup_exact, gripe_lock, gripe_corrupt_data):
	  Stop declaring inline.
	* src/security.h (drop_effective_privs, regain_effective_privs):
	  Stop declaring inline.

Wed Aug  6 22:23:41 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): If display_to_stdout is set, assert that
	  man_file is non-NULL; all the stray-cat code paths ensure that
	  neither troff nor recode is set by this point (Coverity CID #5).

Wed Aug  6 21:40:37 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (manopt_to_env): Duplicate options assigned to elements
	  of argv, and free the copy of manopt before returning. This isn't
	  really a bug as such, but it appeases Coverity CID #22.

Thu Jul 31 02:10:06 BST 2008  Colin Watson  <cjwatson@debian.org>
